Added controller and services and updated readme
